# PHOTOS

./: Makefile  configure  configure.paths.csh.in  configure.paths.sh.in
documentation/: svn_info_photos.3.64.txt
documentation/doxygen/: changelog.txt  mainpage.h
examples/: Makefile  configure  configure.in  make.inc.in  photosLCG_pythia_example.cxx  photos_hepmc3_standalone_example.cxx  photos_pythia_example.cxx  photos_standalone_example.cxx  single_photos_gun_example.cxx  tauola_photos_pythia_example.cxx
examples/testing/: Makefile  photos_tauola_test.cxx  photos_test.cxx
platform/: make.inc.in  use-LCG-config.sh
platform/LCGCONFIG/: configure.ac
platform/LCGCONFIG/examples/: Makefile.am
platform/LCGCONFIG/examples/testing/: Makefile.am
platform/LCGCONFIG/src/: Makefile.am
src/eventRecordInterfaces/: Makefile  PhotosHEPEVTParticle.cxx  PhotosHEPEVTParticle.h  PhotosHepMC3Event.cxx  PhotosHepMC3Event.h  PhotosHepMC3Particle.cxx  PhotosHepMC3Particle.h  PhotosHepMCParticle.cxx
src/photos-C/: forZ-MEc.cxx  forZ-MEc.h  photosC.cxx
src/photosCInterfaces/: Photos.cxx  Photos.h  Version.h.in
src/utilities/: PhotosDebugRandom.cxx
